[package]
name = "defuse-escrow"
edition.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-borsh-utils = { workspace = true, features = ["chrono"] }
defuse-fees.workspace = true
defuse-map-utils.workspace = true
defuse-near-utils.workspace = true
defuse-nep245.workspace = true
defuse-num-utils.workspace = true
defuse-token-id.workspace = true

near-contract-standards.workspace = true
near-sdk.workspace = true

chrono = { workspace = true, features = ["serde"] }
impl-tools.workspace = true
thiserror.workspace = true
serde_with = { workspace = true, features = ["chrono_0_4"] }

[features]
abi = ["serde_with/schemars_0_8"]
contract = []
