[package]
name = "defuse-escrow"
edition.workspace = true
version = "0.1.0"
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-borsh-utils = { workspace = true, features = ["chrono"] }
defuse-fees.workspace = true
defuse-map-utils.workspace = true
defuse-near-utils = { workspace = true, features = ["time"] }
defuse-nep245.workspace = true
defuse-num-utils.workspace = true
defuse-token-id = { workspace = true, features = ["unbounded"] }

near-contract-standards.workspace = true
near-sdk.workspace = true

chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["from"] }
hex.workspace = true
impl-tools.workspace = true
itertools.workspace = true
serde_with = { workspace = true, features = ["chrono_0_4", "hex"] }
thiserror.workspace = true

[dev-dependencies]
defuse = { workspace = true, features = ["contract"] }
defuse-sandbox.workspace = true

anyhow.workspace = true
futures.workspace = true
hex.workspace = true
impl-tools.workspace = true
tokio = { workspace = true, features = ["macros"] }

[features]
default = ["nep141", "nep245"]

nep141 = ["defuse-token-id/nep141"]
nep245 = ["defuse-token-id/nep245"]

abi = ["serde_with/schemars_0_8", "defuse-token-id/abi"]
contract = []
