[package]
name = "defuse-global-deployer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.19.0-rust-1.86.0"
image_digest = "sha256:772638e343baeeea24e49062c7d424274f3441452cc06ce97fc4e5695b19fecc"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
    "--features=abi,contract",
    "--no-embed-abi",
]

[features]
abi = ["defuse-serde-utils/abi"]
contract = []

[dependencies]
defuse-serde-utils.workspace = true
near-sdk = { workspace = true, features = ["deterministic-account-ids"] }

