[package]
name = "defuse-global-deployer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
abi = ["defuse-serde-utils/abi"]
contract = []

[dependencies]
defuse-serde-utils.workspace = true
near-sdk = { workspace = true, features = ["deterministic-account-ids"] }

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.20.0-rust-1.86.0"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
    "--features=contract",
    "--abi-features=abi,contract",
    "--no-embed-abi",
]
