[package]
name = "multi-token-receiver-stub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
defuse-nep245.workspace = true
near-sdk.workspace = true

[dev-dependencies]
near-sdk.workspace = true
near-workspaces.workspace = true
tokio.workspace = true
serde_json.workspace = true
