[package]
name = "defuse-near-utils"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-borsh-utils.workspace = true

chrono = { workspace = true, optional = true }
digest = { workspace = true, optional = true }
impl-tools.workspace = true
near-sdk.workspace = true

[features]
digest = ["dep:digest"]
time = ["dep:chrono"]

[dev-dependencies]
rstest.workspace = true
test-utils.workspace = true
near-sdk = {workspace = true, features = ["unit-testing"]}

[lints]
workspace = true
