[package]
name = "defuse-near-utils"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-borsh-utils.workspace = true

chrono = { workspace = true, optional = true }
digest = { workspace = true, optional = true }
impl-tools.workspace = true
hex = { workspace = true, optional = true }
near-sdk.workspace = true

[features]
digest = ["dep:digest"]
time = ["dep:chrono"]

[dev-dependencies]
defuse-test-utils.workspace = true

rstest.workspace = true
serde_json.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }

[lints]
workspace = true
