[package]
name = "defuse-nep245"
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
near-sdk.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde_with = { workspace = true, features = ["chrono_0_4"] }