[package]
name = "defuse-oneshot-condvar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.2-rust-1.86.0"
image_digest = "sha256:74c24d4d912f893198b8b13e01d43e0f78f3b00b3df45bf555a707eb4918a54e"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
    "--features=contract",
    "--no-embed-abi",
]

[dependencies]
defuse-auth-call = { workspace = true, optional = true }
defuse-near-utils.workspace = true
defuse-nep245.workspace = true
impl-tools.workspace = true
near-sdk = { workspace = true, features = ["unstable", "deterministic-account-ids"] }
serde_with.workspace = true
thiserror.workspace = true

[features]
contract = []
abi = []
auth-call = ["dep:defuse-auth-call"]
