[package]
name = "defuse-poa-factory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.18.0-rust-1.86.0"
image_digest = "sha256:2d0d458d2357277df669eac6fa23a1ac922e5ed16646e1d3315336e4dff18043"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
    "--features=contract",
    "--no-embed-abi"

]

[dependencies]
defuse-admin-utils.workspace = true
defuse-near-utils.workspace = true
defuse-poa-token.workspace = true

near-contract-standards.workspace = true
near-plugins.workspace = true
near-sdk.workspace = true

[dev-dependencies]
defuse-sandbox = { workspace = true }
rstest.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros"] }

[features]
contract = []

[build-dependencies]
cargo-near-build = { workspace = true, features = ["build_external"] }