[package]
name = "runesdex-solver"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "RunesDex Solver for NEAR Intents integration"
readme = "README.md"
license = "MIT"

[dependencies]
defuse-core = { path = "../core" }
near-sdk = { version = "5.0.0" }
near-plugins = { version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4.0"
borsh = "1.0.0"
near-crypto = "0.17.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
chrono = "0.4.26"
anyhow = "1.0.75"
once_cell = "1.18.0"
base64 = "0.21.4"
async-trait = "0.1.68"
log = "0.4.20"
env_logger = "0.10.0"
thiserror = "1.0.49"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "runesdex-solver"
path = "src/main.rs" 