[package]
name = "defuse-sandbox-ext"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
defuse-escrow-proxy.workspace = true
defuse-escrow-swap.workspace = true
defuse-sandbox.workspace = true
defuse-oneshot-condvar.workspace = true
defuse-crypto = { workspace = true, features = ["serde"] }
defuse-deadline.workspace = true
defuse-nep413.workspace = true
defuse-token-id.workspace = true
defuse-core.workspace = true
defuse-fees.workspace = true
ed25519-dalek.workspace = true
anyhow.workspace = true
near-sdk.workspace = true
serde_json.workspace = true
