[package]
name = "defuse-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
defuse-crypto = { workspace = true, features = ["near-api-types"] }
defuse-nep413 = { workspace = true, features = ["near-api"] }
defuse-nep245.workspace = true
tokio.workspace = true
rstest.workspace = true

anyhow.workspace = true
futures.workspace = true
libc = "0.2"
impl-tools.workspace = true
near-api.workspace = true
near-openapi-types.workspace = true
near-sandbox.workspace = true
near-sdk = { workspace = true, features = ["unit-testing", "deterministic-account-ids"] }
tracing.workspace = true

near-contract-standards.workspace = true
