[package]
name = "defuse-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
defuse = ["dep:defuse", "dep:defuse-test-utils", "dep:defuse-serde-utils"]
poa = ["dep:defuse-poa-factory"]
escrow = ["dep:defuse-escrow-swap"]
imt = ["defuse", "defuse/imt"]

[dependencies]
defuse-crypto = { workspace = true, features = ["near-api-types"] }
defuse-nep413 = { workspace = true, features = ["near-api"] }
defuse-nep245.workspace = true
tokio.workspace = true
rstest.workspace = true

anyhow.workspace = true
futures.workspace = true
libc = "0.2"
impl-tools.workspace = true
near-api.workspace = true
near-openapi-types.workspace = true
near-sandbox.workspace = true
near-sdk = { workspace = true, features = ["unit-testing", "deterministic-account-ids"] }
tracing.workspace = true

near-contract-standards.workspace = true

defuse-poa-factory = {workspace = true, optional = true, features = ["contract"] }
defuse-escrow-swap = { workspace = true, optional = true, features = ["auth_call"] }

defuse = { workspace = true, optional = true, features = ["contract"] }
defuse-serde-utils = { workspace = true, optional = true }
defuse-test-utils = { workspace = true, optional = true }