[package]
name = "sep53"
edition.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
defuse-crypto = { workspace = true, features = ["serde"] }
defuse-near-utils.workspace = true
defuse-serde-utils.workspace = true

impl-tools.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }
serde_with.workspace = true

[dev-dependencies]
near-crypto.workspace = true
# FIXME: move to root Cargo.toml
stellar-strkey = "0.0"
ed25519-dalek = "2.0"
base64 = "0.22"
sha2 = "0.10"

[features]
abi = ["defuse-serde-utils/abi", "defuse-crypto/abi"]

[lints]
workspace = true
