[package]
name = "defuse-sep53"
edition.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
defuse-crypto = { workspace = true, features = ["serde"] }
defuse-near-utils.workspace = true
defuse-serde-utils.workspace = true

impl-tools.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }
serde_with.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
near-crypto.workspace = true
# FIXME: move to root Cargo.toml
stellar-strkey = "0.0"

[features]
abi = ["defuse-serde-utils/abi", "defuse-crypto/abi"]

[lints]
workspace = true
