[package]
name = "defuse-sep53"
edition.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
defuse-crypto = { workspace = true, default-features = false, features = [
    "secp256k1",
] }

impl-tools.workspace = true
near-sdk.workspace = true

[dev-dependencies]
defuse-test-utils.workspace = true
ed25519-dalek.workspace = true
near-crypto.workspace = true
rstest.workspace = true
stellar-strkey.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }

[lints]
workspace = true
